@startuml

class Termin {
    +czyKoliduje(const Termin& inny) : bool 
    -dataDo : pt::ptime
    -dataOd : pt::ptime
    +serializuj() : string 
}

abstract class Pojazd {
    +czyDostepny(const Termin& t) : bool 
    +{abstract} czyMozeWykonacZlecenie(const Zlecenie& z) : bool 
    -kosztAmortyzacji : double
    -numerRejestracyjny : string
    +{abstract} pobierzOpisPojazdu() : string
    +{abstract} pobierzWymaganaKategorie() : string
    +{abstract} serializuj() : string 
    -zajeteTerminy : vector<Termin>
    +zarezerwujTermin(const Termin& t) : void
}

class BusDostawczy {
    +czyMozeWykonacZlecenie(const Zlecenie& z) : bool
    -pojemnoscM3 : double
    +pobierzOpisPojazdu() : string
    +pobierzWymaganaKategorie() : string
    +serializuj() : string 
}

class Ciezarowka {
     +czyMozeWykonacZlecenie(const Zlecenie& z) : bool
    -wymagaNaczepy : bool
    -maksLadownoscTony : double
    +pobierzOpisPojazdu() : string
    +pobierzWymaganaKategorie() : string
    +serializuj() : string 
}

abstract class Pracownik {
    +czyDostepny(const Termin& t) : bool 
    +{abstract} czyUmieWykonacZlecenie(const Zlecenie& z) : bool 
    +{abstract} mozeWykonacPrace(string wymaganaKategoria) : bool
    -stawkaGodzinowa : double
    -idPracownika : string
    -imieNazwisko : string
    +{abstract} pobierzPelneDane() : string
    +{abstract} serializuj() : string 
    -zajeteTerminy : vector<Termin>
    +zarezerwujTermin(const Termin& t) : void
}

class Kierowca {
    +czyUmieWykonacZlecenie(const Zlecenie& z) : bool
    +mozeWykonacPrace(string wymaganaKategoria) : bool 
    +pobierzPelneDane() : string
    +serializuj() : string 
    -kategoriePrawaJazdy : vector<string>
}

/' Relacje '/
Pojazd <|-- BusDostawczy
Pojazd <|-- Ciezarowka
Pracownik <|-- Kierowca

Pojazd *-- Termin
Pracownik *-- Termin

note right of Pojazd
  **Dziedziczenie, abstrakcja i polimorfizm:**
  Klasy abstrakcyjne Pojazd i Pracownik definiują
  wirtualne destruktory (+~Pojazd()) oraz metody czysto
  wirtualne (np. '{abstract} czyMozeWykonacZlecenie()').
  Dzięki temu system może zarządzać wskaźnikami bazowymi,
  a wywołanie metody uruchomi specyficzną logikę w klasach
  pochodnych (BusDostawczy sprawdza pojemność M3, a Ciezarowka
  maksymalną ładowność i naczepę - zachowanie jest całkowicie inne).
end note

@enduml